--- a/src/_templates/includes/in-game.css
+++ b/src/_templates/includes/in-game.css
@@ -1,3 +1,9 @@
+body:has(dialog[open]) {
+    overflow: clip;
+}
+body {
+    overflow: auto;
+}
 progress {
     appearance: none;
     border-radius: 5rem;
@@ -72,7 +78,6 @@ progress {
 
     text-transform: uppercase;
     letter-spacing: .1em;
-    container: letters / inline-size;
 }
 
 .content-center {
@@ -100,9 +105,9 @@ progress {
 .keyboard {
     --m-col-s: 9;
     --m-col-w: min(10vi, 84px);
-    --m-row-h: 3.25rem;
+    --m-row-h: auto;
     --color-fill: var(--system-color-white);
-    --c-gap: min(2vi, 1rem);
+    --c-gap: min(5cqi, 1rem);
 }
 
 @container (inline-size <=13.5rem) {
@@ -122,43 +127,66 @@ button[aria-disabled="true"] {
     --color-fill: oklch(98.5% 0% 0deg / 25%);
 }
 
-.menu {
-    --s: min(592px, 85vi);
-    --alignment: center;
-    --min-padding: .75rem min(15vi, 4rem);
-    --radius: calc(min(15vi, 4rem) / 2);
-    --c-space: 2rem;
-
-    inline-size: var(--s);
-    inset-block-start: var(--y, min(25lvb, 210px));
-    inset-inline-start: calc(50vi - (var(--s) / 2));
-    padding: 2em 1.5rem min(11lvb, 87px);
-    background-image: linear-gradient(in oklch to bottom, oklch(46% 0.178 270), oklch(29% 0.166 264 / 83%));
-    overflow: clip visible;
-
-    &::backdrop {
-        background: linear-gradient(oklch(20% 0.1 295deg / 85%), oklch(28% 0.17 271deg / 85%) 70%, oklch(31% 0.152 283deg / 85%));
-        backdrop-filter: blur(4px);
-    }
-
-    &:not(:popover-open) {
-        display: none;
-    }
-
-    &:popover-open {
-        transform: scale(1.1);
-    }
-
-    &> :is(a, button) {
-        font-size: clamp(1.2rem, 1.113rem + 0.58 * var(--font-unit, 1vw), 1.5625rem);
-    }
+.menu-wrapper {
+    inset: 1px;
+    margin: auto;
+    display: flex;
+    flex-flow: column;
+    transform: scale(0.1);
+    inline-size: min(85vi, 500px);
+    background: transparent;
 
     &>h2 {
         letter-spacing: 0.01em;
         font-size: clamp(3.7994rem, 2.5557rem + 1.6245 * var(--font-unit, 1vw), 4.8147rem);
         text-transform: capitalize;
-        margin-block-start: -4rem;
+        text-wrap: nowrap;
+        margin-block-end: -2rem;
+        z-index: 2;
+        align-self: center;
     }
+    & > .menu {
+        flex-grow: 2;
+    }
+
+    &:not([open]) {
+        display: none;
+    }
+
+    &[open] {
+        transform: none;
+    }
+
+    &::backdrop {
+        background: linear-gradient(oklch(20% 0.1 295deg / 85%), oklch(28% 0.17 271deg / 85%) 70%, oklch(31% 0.152 283deg / 85%));
+        backdrop-filter: blur(4px);
+    }
+}
+
+.menu {
+    --alignment: center;
+    --min-padding: .75rem min(15vi, 4rem);
+    --radius: calc(min(15vi, 4rem) / 2);
+    --c-space: 2rem;
+
+    position: relative;
+    padding: min(5vmin, 1.5em) min(5vmin, 1.5em) min(11lvb, 87px);
+    background-image: linear-gradient(in oklch to bottom, oklch(46% 0.178 270), oklch(29% 0.166 264 / 83%));
+    overflow: clip auto;
+    overflow: clip / auto; /* for safari */
+
+    &::before {
+        content: "";
+        display: block;
+        block-size: 2rem;
+    }
+
+    &> :is(a, button) {
+        line-height: 1.3;
+        text-align: center;
+        font-size: clamp(1.2rem, 1.113rem + 0.58 * var(--font-unit, 1vw), 1.5625rem);
+    }
+
 }
 
 .pink-shadow {
